# machine-learning-dio

./: README.md  activity01_dio.ipynb  calculate_avaliation_metrics.ipynb  cats_vs_dogs.ipynb  face_recognition_algorithm.ipynb  image_dimensionality_reduction.ipynb  pyproject.toml  recommendation_network.ipynb  transfer_learning.ipynb  virtual_assistant.ipynb  virtual_assistant.py  yolo_detection_network.ipynb
