[tool.poetry]
name = "machine-learning-dio"
version = "0.1.0"
description = ""
authors = ["keven silva <keven.almeida.8179@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning_dio"}]

[tool.poetry.dependencies]
python = "3.10.6"
SpeechRecognition = "^3.9.0"
gTTS = "^2.3.0"
pygame = "^2.1.2"
wikipedia = "^1.4.0"
pyjokes = "^0.6.0"
googletrans = "3.1.0a0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
